updated players files

--- a/app/views/players/_form.html.erb
+++ b/app/views/players/_form.html.erb
@@ -27,6 +27,10 @@
     <%= f.label :blocks %><br />
     <%= f.number_field :blocks %>
   </div>
+
+    <div class="field">
+      <%= f.number_field %>
+    </div>
   <div class="actions">
     <%= f.submit %>
   </div>
