--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -20,6 +20,10 @@
   <%= @player.blocks %>
 </p>
 
+<p>
+  <b>Team</b>
+</p>
+
 
 <%= link_to 'Edit', edit_player_path(@player) %> |
 <%= link_to 'Back', players_path %>
