--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -7,6 +7,7 @@
     <th>City</th>
     <th>Name</th>
     <th>Division</th>
+    <th>Players</th>
     <th></th>
     <th></th>
     <th></th>
@@ -17,6 +18,7 @@
     <td><%= team.city %></td>
     <td><%= team.name %></td>
     <td><%= team.division.name %></td>
+    <td><%= team.players.count %></td>
     <td><%= link_to 'Show', team %></td>
     <td><%= link_to 'Edit', edit_team_path(team) %></td>
     <td><%= link_to 'Destroy', team, method: :delete, data: { confirm: 'Are you sure?' } %></td>
