--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -6,6 +6,7 @@
     <th>Points</th>
     <th>Assists</th>
     <th>Blocks</th>
+    <th>Team</th>
     <th></th>
     <th></th>
     <th></th>
@@ -17,6 +18,7 @@
     <td><%= player.points %></td>
     <td><%= player.assists %></td>
     <td><%= player.blocks %></td>
+    <td><%= player.team.name %></td>
     <td><%= link_to 'Show', player %></td>
     <td><%= link_to 'Edit', edit_player_path(player) %></td>
     <td><%= link_to 'Destroy', player, method: :delete, data: { confirm: 'Are you sure?' } %></td>
