added :logo to team model/migration/db

--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -20,6 +20,10 @@
     </div>
 
     <div class="field">
+      <%= f.file_field :logo %>
+    </div>
+
+    <div class="field">
       <%= collection_select(:team, :division_id, Division.all, :id, :name) %>
     </div>
 
